restructured grid props + added in Photography page

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@ cursor: none;
 
 body {
     overflow-x: hidden;
+    cursor: none;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;700&display=swap');
